--- a/task_user/pom.xml
+++ b/task_user/pom.xml
@@ -56,6 +56,12 @@
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-feign</artifactId>
+            <version>2.0.0.M1</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
