--- a/task_user/pom.xml
+++ b/task_user/pom.xml
@@ -62,6 +62,21 @@
             <artifactId>spring-cloud-starter-feign</artifactId>
             <version>2.0.0.M1</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.9.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
