--- a/task-api-gateway/src/main/resources/bootstrap.yml
+++ b/task-api-gateway/src/main/resources/bootstrap.yml
@@ -11,4 +11,7 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka/
+management:
+  security:
+    enabled: false
 
