--- a/task/src/main/resources/bootstrap.yml
+++ b/task/src/main/resources/bootstrap.yml
@@ -12,3 +12,15 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka/
+#hystrix:
+#  command:
+#    default:
+#      execution:
+#        isolation:
+#          thread:
+#            timeoutInMilliseconds: 3000
+#    getSomeThing:
+#      execution:
+#        isolation:
+#          thread:
+#            timeoutInMilliseconds: 1000
