--- a/eureka/src/main/resources/application.yml
+++ b/eureka/src/main/resources/application.yml
@@ -1,11 +1,3 @@
-eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:8761/eureka/
-    register-with-eureka: false
-
 spring:
-  application:
-    name: eureka
-server:
-  port: 8761
+  profiles:
+    active: dev
