--- a/task-api-gateway/pom.xml
+++ b/task-api-gateway/pom.xml
@@ -64,7 +64,13 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
-    </dependencies>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-zipkin</artifactId>
+        </dependency>
+
+     </dependencies>
 
     <dependencyManagement>
         <dependencies>
