--- a/task-api-gateway/src/main/resources/bootstrap.yml
+++ b/task-api-gateway/src/main/resources/bootstrap.yml
@@ -1,17 +1,3 @@
 spring:
-  application:
-    name: api-gateway
-  cloud:
-    config:
-      discovery:
-        enabled: true
-        service-id: CONFIG
-      profile: dev
-eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:8761/eureka/
-management:
-  security:
-    enabled: false
-
+  profiles:
+    active: dev
