--- a/task/src/main/resources/bootstrap.yml
+++ b/task/src/main/resources/bootstrap.yml
@@ -1,26 +1,3 @@
 spring:
-  application:
-    name: task
-  cloud:
-    config:
-      discovery:
-        enabled: true
-        service-id: CONFIG
-      profile: dev
-
-eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:8761/eureka/
-#hystrix:
-#  command:
-#    default:
-#      execution:
-#        isolation:
-#          thread:
-#            timeoutInMilliseconds: 3000
-#    getSomeThing:
-#      execution:
-#        isolation:
-#          thread:
-#            timeoutInMilliseconds: 1000
+  profiles:
+    active: dev
