--- a/task_config/src/main/resources/application.yml
+++ b/task_config/src/main/resources/application.yml
@@ -1,24 +1,3 @@
 spring:
-  application:
-    name: config
-  cloud:
-    config:
-      server:
-        git:
-          uri: https://gitlab.com/
-          username:
-          password:
-          basedir: G:\Projects\GitConfigBase\
-  rabbitmq:
-    host: 192.168.1.233
-eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:8761/eureka/
-server:
-  port: 8086
-management:
-  endpoints:
-    web:
-      exposure:
-        include: "*"
+  profiles:
+    active: dev
