--- a/task_user/src/main/resources/bootstrap.yml
+++ b/task_user/src/main/resources/bootstrap.yml
@@ -1,20 +1,3 @@
 spring:
-  application:
-    name: user
-  cloud:
-    config:
-      discovery:
-        enabled: true
-        service-id: CONFIG
-      profile: dev
-  jpa:
-    database-platform: org.hibernate.dialect.PostgreSQL9Dialect
-    properties:
-      hibernate:
-        jdbc:
-          lob:
-            non_contextual_creation: true
-eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:8761/eureka/
+  profiles:
+    active: dev
